OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/Communication_Template__c.object-meta.xml
<CustomObject>
    <description
  >Unified template registry for onboarding communications (Email/SMS/In-App) with channel-specific template IDs and message bodies. Templates are synced from Salesforce Email Templates (for Email) and can reference Twilio Messaging Templates (for SMS). All fields are read-only and synced nightly via EmailTemplateSyncService or manually. Example: A Communication_Template__c with Communication_Type__c=&quot;Email&quot; and Email_Template_Id__c=&quot;00X000000000123&quot; might be used by a Follow_Up_Rule__mdt to send reminder emails when onboarding requirements are incomplete. Templates are linked to Vendor Programs via Vendor_Program_Recipient_Group__c associations.</description>
    <label>Communication Template</label>
    <nameField>
        <label>Communication Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>