OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this communication template is active for use.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>