OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/BCC_Public_Group_DeveloperNames__c.field-meta.xml
<CustomField>
    <fullName>BCC_Public_Group_DeveloperNames__c</fullName>
    <description>Optional Public Group developer names to BCC for this template. Accepts comma, semicolon, or newline-separated values and expands group membership to active users with email addresses.</description>
    <label>BCC Public Group Developer Names</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>