OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/BCC_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>BCC_User_Ids__c</fullName>
    <description>Optional internal User Ids (005...) to BCC when this template is sent. Accepts comma, semicolon, or newline-separated values.</description>
    <label>BCC User Ids</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>