OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>Stores DeveloperName of CMDT record</description>
    <label>Email Template Catalog (DeveloperName)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>