OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>Subject line to use when sending emails from this template.</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>