OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <description>Identifier of the underlying Email Template to render for this communication.</description>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>