OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <description>Name of the folder containing the source email template.</description>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>