OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>SMS/plain text body when not using a Messaging Template.</description>
    <label>Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>