OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Messaging_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Channel_Id__c</fullName>
    <description>Messaging Channel Id for SMS sends.</description>
    <label>Messaging Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>