OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Messaging_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Template_Id__c</fullName>
    <description>Messaging Template Id for SMS sends.</description>
    <label>Messaging Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>