OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/fields/Sync_Job__c.field-meta.xml
<CustomField>
    <fullName>Sync_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the job/run that synced this template from the source system.</description>
    <label>Sync Job</label>
    <referenceTo>Sync_Log__c</referenceTo>
    <relationshipLabel>Communication Templates</relationshipLabel>
    <relationshipName>Communication_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>