OnboardingV2Minimal/force-app/main/default/objects/Communication_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Folder_Name__c</columns>
    <columns>Email_Subject__c</columns>
    <columns>DeveloperName__c</columns>
    <columns>Email_Template_Id__c</columns>
    <columns>Communication_Type__c</columns>
    <columns>Send_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>